[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=6]
action = "start_game"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30

[node name="Message" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps!"
align = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 189.0
margin_right = 480.0
margin_bottom = 501.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 460.0
margin_bottom = 312.0
custom_constants/separation = 30

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 84.0
rect_min_size = Vector2( 440, 84 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="SettingButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 440.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Setting"

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 440.0
margin_bottom = 312.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Exit"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
